fixed navbar styling to align to the right side and added flex to the boxes so they remain on the screen

--- a/assests/style.css
+++ b/assests/style.css
@@ -60,13 +60,19 @@ button {
     max-width: 90%;
 }
 
-.navbar-start{
+.navbar{
     display: flex;
     flex-direction: row;
-    position: absolute;
+    flex-wrap: wrap;
+    align-items: center;
     right: 0rem;
     height: 100%;
 }
 
+#navbarBasicExample {
+    display: flex; 
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
     
